# phonedmrapp

./: .gitignore  ANDROID_APRS_RECEIVER_IMPLEMENTATION.md  APRS_COMPLETE_SYSTEM_SUMMARY.md  APRS_DECODING_STATUS.md  APRS_TX_PROBLEM.md  CHANNEL_PROPERTIES_REFERENCE.md  COMMAND_FUZZING_GUIDE.md  COMPOUND_KEY_REVERT_GUIDE.md  CONTACTTYPE_LOCATIONS_ANALYSIS.md  CONTINUATION_NOTES.md  Channelstest.csv  DECOMPILATION_AND_BUILD_FIXES.md  DECOMPILATION_README.md  DECOMPILATION_STATUS.md  DMR_FIRMWARE_PROJECT_STATUS.md  DMR_FIX_ROADMAP.md  DMR_GROUP_CALL_ISSUE.md  DMR_GROUP_CALL_RESEARCH.md  FILE_INDEX.md  FIRMWARE_ANALYSIS_SUMMARY.md  FIRMWARE_FLASHING_EXPLORATION.md  FIRMWARE_PATCH_RESULTS.md  GHIDRA_ANALYSIS_PLAN.md  GHIDRA_ANALYSIS_STATUS.md  GHIDRA_NAVIGATION_GUIDE.md  GROK_FIRMWARE_HELP_REQUEST.md  GROK_PHASE1_RESULTS.md  GROK_PHASE2_INSTRUCTIONS.md  GROK_RESPONSE.md  GROK_TRANSCRIPTION_UPDATE.md  IMMEDIATE_ACTIONS.md  IPC_SERVICE_IMPLEMENTATION_PLAN.md  JADX_DECOMPILATION_ERRORS.md  LICENSE  LSPOSED_SUCCESS.md  MACGYVER_MOD_STATUS.md  MAGISK_SOLUTION.md  MONITORING_MODE_INVESTIGATION.md  NOTES_FOR_GROK.md  NOTES_FOR_GROK_APRS_AFSK.md  (+162 more)
DMRModHooks/: AFSKTest.java  AFSKTest2.java  AFSKTest3.java  ANALOG_MON_FEATURE.md  APRS_ANDROID_INTEGRATION_FIXES.md  APRS_CLEANUP_AND_RX_IMPROVEMENT_PLAN.md  APRS_DECODING_ISSUES.md  APRS_FIXES_APPLIED.md  APRS_FREQUENCY_AND_TX_INJECTION.md  APRS_TX_INVESTIGATION_FINAL_REPORT.md  DECODER_TESTING_GUIDE.md  DIREWOLF_INTEGRATION.md  DMR_FIRMWARE_RELOAD_NOTES.md  PHASE2_PLAN.md  (+39 more)
DMRModHooks/app/src/main/cpp/: CMakeLists.txt  direwolf_jni.cpp
(+9255 files in other folders)
